--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
                                             <div class="form-group">
                                                 <div class="custom-control custom-checkbox"><input class="custom-control-input" id="rememberPasswordCheck" type="checkbox" /><label class="custom-control-label" for="rememberPasswordCheck">Remember password</label></div>
                                             </div>
-                                            <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><a class="small" href="password.html">Forgot Password?</a><input type="submit" class="btn btn-primary" id="submitbutton" value="Login" /></div>
+                                            <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0"><a class="small" href="password.html">Forgot Password?</a><input type="button" class="btn btn-primary" id="submitbutton" value="Login" /></div>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center">
