--- a/500.html
+++ b/500.html
@@ -20,7 +20,7 @@
                                 <div class="text-center mt-4">
                                     <h1 class="display-1">500</h1>
                                     <p class="lead">Internal Server Error</p>
-                                    <a href="index.html"><i class="fas fa-arrow-left mr-1"></i>Return to Dashboard</a>
+                                    <a href="index.php"><i class="fas fa-arrow-left mr-1"></i>Return to Dashboard</a>
                                 </div>
                             </div>
                         </div>
