ON PEUT REGISTER

--- a/register.html
+++ b/register.html
@@ -39,7 +39,7 @@
                                                     <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirm Password</label><input class="form-control py-4" id="inputConfirmPassword" type="password" placeholder="Confirm password" name="pwd_repeat"/></div>
                                                 </div>
                                             </div>
-                                            <div class="form-group mt-4 mb-0"><input type="button" class="btn btn-primary" id="registersubmitbuttun" value="Create Account" /></div>
+                                            <div class="form-group mt-4 mb-0"><input type="button" class="btn btn-primary" id="registersubmitbutton" value="Create Account" /></div>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center">
@@ -69,5 +69,6 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="src/js/scripts.js"></script>
+        <script src="src/js/app.js" type="module"></script>
     </body>
 </html>
