--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Page Title - SB Admin</title>
+        <title>Inscription</title>
         <link href="src/css/styles.css" rel="stylesheet" />
         <link rel="icon" href="./favicon.ico">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" crossorigin="anonymous"></script>
@@ -19,31 +19,31 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-7">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Account</h3></div>
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Créer un compte</h3></div>
                                     <div class="card-body">
                                         <form>
                                             <div class="form-row">
                                                 <div class="col-md-6">
-                                                    <div class="form-group"><label class="small mb-1" for="inputFirstName">First Name</label><input class="form-control py-4" id="inputFirstName" type="text" placeholder="Enter first name" name="nom" /></div>
+                                                    <div class="form-group"><label class="small mb-1" for="inputFirstName">Prénom</label><input class="form-control py-4" id="inputFirstName" type="text" placeholder="Entrez votre prénom" name="nom" /></div>
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <div class="form-group"><label class="small mb-1" for="inputLastName">Last Name</label><input class="form-control py-4" id="inputLastName" type="text" placeholder="Enter last name" name="prenom"/></div>
+                                                    <div class="form-group"><label class="small mb-1" for="inputLastName">Nom</label><input class="form-control py-4" id="inputLastName" type="text" placeholder="Entrez votre nom" name="prenom"/></div>
                                                 </div>
                                             </div>
-                                            <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" name="mail" /></div>
+                                            <div class="form-group"><label class="small mb-1" for="inputEmailAddress">Email</label><input class="form-control py-4" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Entrez votre adresse mail" name="mail" /></div>
                                             <div class="form-row">
                                                 <div class="col-md-6">
-                                                    <div class="form-group"><label class="small mb-1" for="inputPassword">Password</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Enter password" name="pwd"/></div>
+                                                    <div class="form-group"><label class="small mb-1" for="inputPassword">Mot de passe</label><input class="form-control py-4" id="inputPassword" type="password" placeholder="Entrez votre mot de passe" name="pwd"/></div>
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirm Password</label><input class="form-control py-4" id="inputConfirmPassword" type="password" placeholder="Confirm password" name="pwd_repeat"/></div>
+                                                    <div class="form-group"><label class="small mb-1" for="inputConfirmPassword">Confirmez votre mot de passe</label><input class="form-control py-4" id="inputConfirmPassword" type="password" placeholder="Confirmez votre mot de passe" name="pwd_repeat"/></div>
                                                 </div>
                                             </div>
-                                            <div class="form-group mt-4 mb-0"><input type="button" class="btn btn-primary" id="registersubmitbutton" value="Create Account" /></div>
+                                            <div class="form-group mt-4 mb-0"><input type="button" class="btn btn-primary" id="registersubmitbutton" value="Créer un compte" /></div>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center">
-                                        <div class="small"><a href="login.html">Have an account? Go to login</a></div>
+                                        <div class="small"><a href="login.html">Vous avez un compte? Connectez vous!</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -55,11 +55,11 @@
                 <footer class="py-4 bg-light mt-auto">
                     <div class="container-fluid">
                         <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2019</div>
+                            <div class="text-muted">Copyright &copy; CrazyCharlyDay 2020</div>
                             <div>
-                                <a href="#">Privacy Policy</a>
+                                <a href="#">Politique de confidentialité</a>
                                 &middot;
-                                <a href="#">Terms &amp; Conditions</a>
+                                <a href="#">Termes &amp; Conditions</a>
                             </div>
                         </div>
                     </div>
